--- a/po/wesnoth-nr/cs.po
+++ b/po/wesnoth-nr/cs.po
@@ -1,7 +1,7 @@
 # translation of wesnoth-nr.pot to Czech
 # Czech translations for Battle for Wesnoth package.
 # Český překlad hry Battle for Wesnoth (Bitva o Wesnoth).
-# Copyright (C) 2007 - 2018 Wesnoth development team
+# Copyright (C) 2007 - 2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Czech Wesnoth translation team <hrubymar10@gmail.com>,
@@ -10,14 +10,14 @@
 # Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2011.
 # Petr Šlejhar <septim>, 2011.
 # Honza <Honza-mistic@seznam.cz>, 2014.
-# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2018.
+# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-04-05 14:39+0200\n"
+"PO-Revision-Date: 2019-02-15 21:14+0100\n"
 "Last-Translator: Martin Hrubý (hrubymar10) <hrubymar10@gmail.com>\n"
 "Language-Team: Český <hrubymar10@gmail.com>\n"
 "Language: cs\n"
@@ -25,7 +25,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:9
@@ -143,6 +143,14 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:23
+#, fuzzy
+#| msgid ""
+#| "The dwarves of Knalga, cannily reckoning the gains from trade, built "
+#| "strong fortifications around Dwarven Doors. The people who called it "
+#| "home, dwarven and human alike, knew that the wealth of their city might "
+#| "arouse envy from afar — hence they kept their weapons sharp, and reckoned "
+#| "themselves well able to fight off any bandit gang or petty warlord that "
+#| "could arise in the thinly-settled Northlands."
 msgid ""
 "The dwarves of Knalga, cannily reckoning the gains from trade, built strong "
 "fortifications around Dwarven Doors. The people who called it home, dwarven "
@@ -2223,7 +2231,7 @@ msgstr "Najdi Malifora a znič ho"
 #. [note]
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:442
 msgid "Be sure to explore"
-msgstr ""
+msgstr "Nezapomeň prozkoumávat okolí"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:469
@@ -2448,6 +2456,11 @@ msgstr ""
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:744
+#, fuzzy
+#| msgid ""
+#| "If you have no objection, Tallin, we would like to join you. These "
+#| "Northlands are hardly safe these days for anyone to be traveling on their "
+#| "own, and we could lend valuable help to your cause."
 msgid ""
 "If you have no objection, Tallin, we would like to join you. These "
 "northlands are hardly safe these days for anyone to be traveling on their "
@@ -2486,10 +2499,8 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:777
-#, fuzzy
-#| msgid "Er... let’s go..."
 msgid "Hmmm, let’s see..."
-msgstr "Eee.. pojďme..."
+msgstr "Hmmm, pojďme..."
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:809
@@ -2762,10 +2773,8 @@ msgstr ""
 
 #. [scenario]: id=05a_01_The_Pursuit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:1255
-#, fuzzy
-#| msgid "800 gold! We’re rich!!"
 msgid "We’re rich!"
-msgstr "Osm set zlatých! Jsme bohatí!!"
+msgstr "Jsme bohatí!!"
 
 #. [scenario]: id=05a_01_The_Pursuit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:1257
@@ -3351,10 +3360,8 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2083
-#, fuzzy
-#| msgid "Great! Forward, men!"
 msgid "Great. Forward, men!"
-msgstr "Výborně! Kupředu, muži!"
+msgstr "Výborně. Kupředu, muži!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2098
@@ -3395,10 +3402,8 @@ msgstr "Stát, lidi, něco je tu hned před námi!"
 
 #. [message]: type=Naga Warrior
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2162
-#, fuzzy
-#| msgid "(<i>Sniff</i>) I smell humans."
 msgid "(<i>sniff</i>) I smell humans."
-msgstr "(<i>Čmuch</i>) Cítím lidi."
+msgstr "(<i>čmuch</i>) Cítím lidi."
 
 #. [message]: type=Naga Fighter
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2167
@@ -3423,17 +3428,13 @@ msgstr ""
 
 #. [option]
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2208
-#, fuzzy
-#| msgid "Yeah, open those doors!"
 msgid "Get those doors open!"
-msgstr "Jasně, otevři dveře!"
+msgstr "Otevřete ty dveře!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2228
-#, fuzzy
-#| msgid "Awesome, let’s go!"
 msgid "Let’s go!"
-msgstr "Skvělé, pojďme!"
+msgstr "Pojďme!"
 
 #. [option]
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2239
@@ -4997,9 +4998,9 @@ msgstr "Tallin zemře."
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:331
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:701
 #, fuzzy
-#| msgid "Death of Stalrag."
+#| msgid "Death of Stalrag"
 msgid "Death of Stalrag."
-msgstr "Stalrag zemře."
+msgstr "Stalrag zemře"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:350
@@ -5303,9 +5304,9 @@ msgstr "Hybaj zpátky do lochu."
 #. [objective]: condition=win
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:693
 #, fuzzy
-#| msgid "Capture Ro’Arthian."
+#| msgid "Capture Ro’Arthian"
 msgid "Capture Ro’Arthian."
-msgstr "Zajmi Ro'Arthiana."
+msgstr "Zajmi Ro'Arthiana"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:735
@@ -7122,6 +7123,12 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:240
+#, fuzzy
+#| msgid ""
+#| "Princess, we are not seeking to do business here: <i>“I do this for you "
+#| "and you do this for me.”</i> No, we seek to build everlasting friendships "
+#| "which will forever ensure the peace and prosperity of these Northlands. "
+#| "Therefore, let there be no talk of debts and repayments between us."
 msgid ""
 "Princess, we are not seeking to do business here: <i>“I do this for you and "
 "you do this for me.”</i> No, we seek to build everlasting friendships which "
@@ -8349,8 +8356,6 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg:1047
-#, fuzzy
-#| msgid "Right. Onward, men!"
 msgid "Right. Onward, men!"
 msgstr "Pravda. Kupředu!"
 
@@ -10603,6 +10608,9 @@ msgstr "Arthian"
 #~ msgid "The dwarves are defeated"
 #~ msgstr "Uf, konečně jsou poraženi."
 
+#~ msgid "Turns run out"
+#~ msgstr "Vyprší počet kol"
+
 #~ msgid "Clear the mines"
 #~ msgstr "Vyčisti doly"
 
@@ -10661,9 +10669,6 @@ msgstr "Arthian"
 
 #~ msgid "‘The master’s study’ eh? I bet we’ll find Malifor there!"
 #~ msgstr "„Pánova pracovna“? Vsadím se, že Malifor bude právě tam!"
-
-#~ msgid "Turns run out"
-#~ msgstr "Vyprší počet kol"
 
 #~ msgid "Death of Tallin or Stalrag."
 #~ msgstr "Tallin nebo Stalrag zemře"
