--- a/po/wesnoth-thot/cs.po
+++ b/po/wesnoth-thot/cs.po
@@ -1,7 +1,7 @@
 # translation of wesnoth-thot.pot to Czech
 # Czech translations for Battle for Wesnoth package.
 # Český překlad hry Battle for Wesnoth (Bitva o Wesnoth).
-# Copyright (C) 2007 - 2018 Wesnoth development team
+# Copyright (C) 2007 - 2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Czech Wesnoth translation team <hrubymar10@gmail.com>,
@@ -10,14 +10,14 @@
 # Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2011.
 # Petr Šlejhar (Septim) <septim@centrum.cz>, 2008 - 2011.
 # Honza <Honza-mistic@seznam.cz>, 2014.
-# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2018.
+# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
-"PO-Revision-Date: 2018-04-05 17:04+0200\n"
+"PO-Revision-Date: 2019-02-15 21:34+0100\n"
 "Last-Translator: Martin Hrubý (hrubymar10) <hrubymar10@gmail.com>\n"
 "Language-Team: Český <hrubymar10@gmail.com>\n"
 "Language: cs\n"
@@ -25,7 +25,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2.1\n"
 
 # Název tažení
 #. [campaign]: id=The_Hammer_of_Thursagan
@@ -2004,21 +2004,33 @@ msgstr "Lannex"
 # říká Angarthing (trpaslík)
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:411
+#, fuzzy
+#| msgid "This place reeks of death."
 msgid "This place smells of death."
-msgstr "Tohle místo má pachuť smrti."
+msgstr "Tohle místo má zápach smrti."
 
 # říká Dulcatulos (trpaslík)
 #. [message]: speaker=Dulcatulos
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:416
+#, fuzzy
+#| msgid ""
+#| "It has been... so many years since I’ve been down here. Only Karrag and "
+#| "his personal followers used this level. I can't believe I never wondered "
+#| "about that before."
 msgid ""
 "It’s been... it’s been years since I’ve been down here. Only Karrag and his "
 "personal followers used this level. Why did I never wonder about that before?"
 msgstr ""
 "Je to ... je to už mnoho let, co jsem tu nebyl. Tyhle prostory používal jen "
-"Karrag a jeho následovníci. Proč mě to nikdy předtím nepřišlo divné?"
+"Karrag a jeho následovníci. Nemohu uvěřit, proč mě to nikdy předtím nepřišlo "
+"divné."
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:422
+#, fuzzy
+#| msgid ""
+#| "Karrag’s will, and his dark magic. I think he has been casting glamours "
+#| "on all of you ever since he passed over."
 msgid ""
 "Karrag’s will, and his dark magic. I think he has been casting glamours on "
 "all of you ever since he passed over."
@@ -2043,6 +2055,11 @@ msgstr ""
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:437
+#, fuzzy
+#| msgid ""
+#| "More likely he has cloaked himself, thinking to run ahead to gather his "
+#| "followers. He could be within a spear-cast of us now and we wouldn’t know "
+#| "it in this gloom."
 msgid ""
 "More likely he has cloaked himself, thinking to run ahead to gather his "
 "followers. He could be within a spear-cast of us now and we wouldn’t know it "
@@ -2067,6 +2084,10 @@ msgstr ""
 
 #. [message]: speaker=Dranath
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:496
+#, fuzzy
+#| msgid ""
+#| "You cannot pass, fools. The doors I guard are sealed by the power of the "
+#| "Hammer itself."
 msgid ""
 "You cannot pass, fools. The doors I guard are sealed by the power of the "
 "Hammer itself."
@@ -2086,6 +2107,10 @@ msgstr "Cítím špatnost. Probouzí se nějaké velké zlo."
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:537
+#, fuzzy
+#| msgid ""
+#| "It seems that guard spoke truth. These doors cannot be forced open by any "
+#| "means we have!"
 msgid ""
 "It seems that guard spoke truth. These doors cannot be forced open by any "
 "means we have!"
@@ -2106,6 +2131,8 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:557
+#, fuzzy
+#| msgid "The key has been uttered, these doors should open..."
 msgid "The key has been uttered, these doors should open..."
 msgstr "Klíč byl vysloven, dveře by měly jít otevřít ..."
 
@@ -2281,6 +2308,8 @@ msgstr ""
 
 #. [message]: speaker=Aragoth
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:1112
+#, fuzzy
+#| msgid "Our master’s ritual must not be interrupted. Stop them!"
 msgid "Our master’s ritual must not be interrupted. Stop them!"
 msgstr "Rituál našeho pána nesmí být přerušen. Zastavte je!"
 
@@ -2767,10 +2796,30 @@ msgid ""
 msgstr ""
 "Argh! Umírám, ale oheň spravedlnosti vás i tak všechny smete do temnot!"
 
-#, fuzzy
-#~| msgid "Defeat the Masked Dwarf"
+#~ msgid "Villagers"
+#~ msgstr "Vesničané"
+
 #~ msgid "Defeat the orcish leaders"
-#~ msgstr "Poraz maskované trpaslíky"
+#~ msgstr "Poraz skřetí vůdce"
+
+# Návěští scénáře
+#~ msgid "Find and defeat Karrag"
+#~ msgstr "Najdi a poraz Karraga"
+
+#~ msgid "Someone died here."
+#~ msgstr "Tady někdo zemřel."
+
+#~ msgid "Poor guy didn't make it."
+#~ msgstr "Ubohý chlapík to nezvládl."
+
+#~ msgid "There's some gold in here!"
+#~ msgstr "Tady je nějaké zlato!"
+
+#~ msgid "I found some gold!"
+#~ msgstr "Našel jsem zlato!"
+
+#~ msgid "Yes, sir!"
+#~ msgstr "Ano, pane!"
 
 # morgenštern
 #~ msgid "morningstar"
