--- a/po/wesnoth-httt/cs.po
+++ b/po/wesnoth-httt/cs.po
@@ -1,7 +1,7 @@
 # translation of wesnoth-httt.pot to Czech
 # Czech translations for Battle for Wesnoth package.
 # Český překlad hry Battle for Wesnoth (Bitva o Wesnoth).
-# Copyright (C) 2004 - 2018 Wesnoth development team
+# Copyright (C) 2004 - 2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Czech Wesnoth translation team <hrubymar10@gmail.com>,
@@ -11,14 +11,14 @@
 # Oto 'tapik' Buchta <tapik@buchtovi.cz>, 2005 - 2007.
 # Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2011.
 # Honza <Honza-mistic@seznam.cz>, 2014.
-# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2018.
+# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:30 UTC\n"
-"PO-Revision-Date: 2018-04-05 14:26+0200\n"
+"PO-Revision-Date: 2019-02-15 20:42+0100\n"
 "Last-Translator: Martin Hrubý (hrubymar10) <hrubymar10@gmail.com>\n"
 "Language-Team: Český <hrubymar10@gmail.com>\n"
 "Language: cs\n"
@@ -26,7 +26,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:9
@@ -965,11 +965,6 @@ msgstr ""
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/03_The_Isle_of_Alduin.cfg:258
 #: data/campaigns/Heir_To_The_Throne/scenarios/03_The_Isle_of_Alduin.cfg:348
-#, fuzzy
-#| msgid ""
-#| "Caution, young prince. It is very difficult to train inexperienced magi "
-#| "in combat. When they fight on the front lines of battle, you must protect "
-#| "magi with stronger units else the enemy will make short work of them."
 msgid ""
 "Caution, young prince. It is very difficult to train inexperienced magi in "
 "combat. When they fight on the front lines of battle, you must protect magi "
@@ -1355,16 +1350,12 @@ msgstr "Ó, ne! Co jenom uděláme?"
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:724
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:851
-#, fuzzy
-#| msgid ""
-#| "You must lead our men to the city, and help defend it. Or recapture it if "
-#| "it falls before you arrive."
 msgid ""
 "You must lead your men to the city. Help defend it, or recapture it if it "
 "falls before you arrive!"
 msgstr ""
-"Musíš vést svoje muže do města a zkusit ho pomoci ochránit. Nebo, pokud "
-"přijdeš pozdě, získat ho zpět."
+"Musíš vést svoje muže do města a zkusit ho pomoci ochránit nebo, pokud "
+"přijdeš pozdě, ho získat zpět!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:729
@@ -1409,18 +1400,12 @@ msgstr "Tedy dobře. Ale jak se tam dostanu?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:766
-#, fuzzy
-#| msgid ""
-#| "It is north-west of here, a few leagues inland. There are two ways to go, "
-#| "by ship or on foot. Each has its own dangers. You must choose between "
-#| "them."
 msgid ""
 "There are two ways to go, by ship or on foot. Each has its own dangers. You "
 "must choose between them."
 msgstr ""
-"Odtud je to na severozápad, ale několik mil ve vnitrozemí. Máš dvě možnosti, "
-"jak se tam dostat: po moři a nebo po souši. Každá cesta má svá vlastní "
-"nebezpečí a rizika. Musíš si vybrat, jak se tam chceš dostat."
+"Máš dvě možnosti, jak se tam dostat: po moři a nebo po souši. Každá cesta má "
+"svá vlastní nebezpečí a rizika. Musíš si vybrat, jak se tam chceš dostat."
 
 #. [option]
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:768
@@ -1474,19 +1459,14 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:842
-#, fuzzy
-#| msgid ""
-#| "I bear ill tidings. Asheviere has laid siege to Elensefar, breaking the "
-#| "century-old treaty between Wesnoth and the Elense city-state. If the city "
-#| "falls, there is no telling how many other lands she may swallow up!"
 msgid ""
 "I bear ill tidings, Konrad. Asheviere has laid siege to Elensefar, breaking "
 "the century-old treaty between Wesnoth and the Elense city-state. If the "
 "city falls, there is no telling how many other lands she may swallow up!"
 msgstr ""
-"Přináším špatné zvěsti: Ašvíra začala obléhat Elensefar, čímž porušila "
-"staletou dohodu mezi Wesnothem a tímto městským státem. Jestliže město "
-"padne, nelze říci, kolik dalších zemí bude pohlceno!"
+"Přináším špatné zvěsti, Konráde: Ašvíra začala obléhat Elensefar, čímž "
+"porušila staletou dohodu mezi Wesnothem a tímto městským státem. Jestliže "
+"město padne, nelze říci, kolik dalších zemí bude pohlceno!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:855
@@ -1881,11 +1861,6 @@ msgstr ""
 
 #. [message]: speaker=Moremirmu
 #: data/campaigns/Heir_To_The_Throne/scenarios/05b_Isle_of_the_Damned.cfg:553
-#, fuzzy
-#| msgid ""
-#| "Thank you for your assistance here brothers. I will stay to continue "
-#| "resisting the foul undead. May fate be with you in your noble quest, and "
-#| "may we meet again some day!"
 msgid ""
 "Thank you for your assistance here, brothers. I will stay to continue "
 "resisting the foul undead. May fate be with you in your noble quest, and may "
@@ -3331,10 +3306,6 @@ msgstr "Bezpečně jsme přebrodili řeku! Kam půjdeme teď?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/11_The_Ford_of_Abez.cfg:490
-#, fuzzy
-#| msgid ""
-#| "If we are to have any hope of penetrating into Knalga, we must continue "
-#| "north to seek help from the Dwarves of the Heart Mountains in the north."
 msgid ""
 "If we are to have any hope of penetrating into Knalga, we must continue "
 "north to seek help from the Dwarves of the Heart Mountains."
@@ -3469,16 +3440,11 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/12_Northern_Winter.cfg:204
-#, fuzzy
-#| msgid "Then we shall wrest control of the land from them. To arms men!"
 msgid "Then we shall wrest control of the land from them. To arms!"
-msgstr "Tak převezmeme vládu nad touto krajinou. Do zbraně, muži!"
+msgstr "Tak převezmeme vládu nad touto krajinou. Do zbraně!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/12_Northern_Winter.cfg:213
-#, fuzzy
-#| msgid ""
-#| "More snow is falling. We must finish this battle quickly. Onward men!"
 msgid "More snow is falling. We must finish this battle quickly. Onward, men!"
 msgstr "Padá stále více sněhu. Musíme ukončit bitvu rychle. Kupředu, muži!"
 
@@ -4006,7 +3972,6 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/14_Plunging_Into_the_Darkness.cfg:346
-#, fuzzy
 msgid ""
 "Peace, friends! Peace! We must not fight among ourselves, for the evil orcs "
 "roam the lands above us."
@@ -4136,11 +4101,6 @@ msgstr ""
 
 #. [message]: speaker=Relgorn
 #: data/campaigns/Heir_To_The_Throne/scenarios/14_Plunging_Into_the_Darkness.cfg:452
-#, fuzzy
-#| msgid ""
-#| "You are right, friend. I will put my best men at your disposal. We know "
-#| "not where the Sceptre is though. Legend says it is hidden in the eastern "
-#| "tunnels."
 msgid ""
 "You are right, friend. I will put my best men at your disposal, though we "
 "know naught of the Sceptre's location. Legend says it is hidden in the "
@@ -4334,11 +4294,6 @@ msgstr ""
 
 #. [message]
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:235
-#, fuzzy
-#| msgid ""
-#| "I am of the merfolk, dweller of the vast oceans! Do not ask me what I am "
-#| "doing in a cave. My lord can be somewhat eccentric. We are fighting at "
-#| "the side of your fellow cave-dwellers to drive back the orcs and trolls."
 msgid ""
 "I am a merman, dweller of the vast oceans! Do not ask me what I am doing in "
 "a cave. My lord can be somewhat eccentric. We are fighting at the side of "
@@ -4350,17 +4305,12 @@ msgstr ""
 
 #. [message]
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:236
-#, fuzzy
-#| msgid ""
-#| "I am of the merfolk, dweller of the vast oceans! Do not ask me what I am "
-#| "doing in a cave. My lord can be somewhat eccentric. We are fighting at "
-#| "the side of your fellow cave-dwellers to drive back the orcs and trolls."
 msgid ""
 "I am a mermaid, dweller of the vast oceans! Do not ask me what I am doing in "
 "a cave. My lord can be somewhat eccentric. We are fighting at the side of "
 "your fellow cave-dwellers to drive back the orcs and trolls."
 msgstr ""
-"Jsem mořský člověk, obyvatel širých oceánů! Neptej se mě, co dělám v "
+"Jsem mořský člověk, obyvatelka širých oceánů! Neptej se mě, co dělám v "
 "jeskyni. Můj pán bývá trochu výstřední. Bojujeme na straně tvých příbuzných "
 "jeskynních obyvatel abychom vytlačili skřety."
 
@@ -4375,10 +4325,6 @@ msgstr ""
 
 #. [message]: speaker=Ulfdain
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:258
-#, fuzzy
-#| msgid ""
-#| "(sniffs) A mer-mahn. Never heard of it. I doubt yer as tasty as my "
-#| "friends here."
 msgid ""
 "(sniffs) A mer-mead. Never heard of it. I doubt yer as tasty as my friends "
 "here."
@@ -4448,10 +4394,6 @@ msgstr ""
 
 #. [message]: speaker=Ulfdain
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:343
-#, fuzzy
-#| msgid ""
-#| "Well, mer-mahn, we made it. I will fight for yer lord. He sounds like a "
-#| "brave fellow."
 msgid ""
 "Well, mer-mead, we made it. I will fight for yer lord. He sounds like a "
 "brave fellow."
@@ -5067,11 +5009,6 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:188
-#, fuzzy
-#| msgid ""
-#| "It is not so simple! We are back on the surface, but we are hardly safe. "
-#| "We barely know where we are. Look to the north... there are orcs about! "
-#| "Look to the south... there are the hordes of the undead!"
 msgid ""
 "It is not so simple! We are back on the surface, but we are hardly safe. We "
 "barely know where we are. Look to the north... there are orcs about! Look to "
@@ -5083,10 +5020,6 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:192
-#, fuzzy
-#| msgid ""
-#| "Indeed there are. We will have to fight our way out. Are you with us, "
-#| "Princess, or against us?"
 msgid ""
 "Indeed there are. We shall have to fight our way out. Are you with us, "
 "Princess, or against us?"
@@ -5096,16 +5029,12 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:196
-#, fuzzy
-#| msgid ""
-#| "Perhaps it is in both our best interests for us to remain allies for a "
-#| "little longer... but I do want that Sceptre, and someday I will have it!"
 msgid ""
 "Perhaps it is in both our best interests for us to remain allies for a "
 "little longer... but I do want that Sceptre, and someday I shall have it!"
 msgstr ""
 "Možná je v zájmu nás obou zůstat ještě na nějakou dobu spojenci… ale já chci "
-"to Žezlo, a jednoho dne ho taky dostanu!"
+"to Žezlo, a jednoho dne bych ho mít měla!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:200
@@ -5559,12 +5488,6 @@ msgstr ""
 #: data/campaigns/Heir_To_The_Throne/scenarios/19a_Snow_Plains.cfg:164
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:371
 #: data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg:209
-#, fuzzy
-#| msgid ""
-#| "I spent my entire childhood listening to my mother give orders and "
-#| "commanding armies around. I hid in the throne room as a little girl as "
-#| "she met with her generals. I now know she was having people killed... "
-#| "entire towns of people killed!"
 msgid ""
 "I spent my entire childhood listening to my mother give orders and command "
 "armies around. I hid in the throne room as a little girl as she met with her "
@@ -5900,8 +5823,6 @@ msgstr "Nenašli jste žádné lodě nepřátel, proti kterým Wesnoťané bojov
 
 #. [message]: role=merman-advisor
 #: data/campaigns/Heir_To_The_Throne/scenarios/19c_Cliffs_of_Thoria.cfg:263
-#, fuzzy
-#| msgid "No we have not. If there were any, they are long gone."
 msgid "No, we have not. If there were any, they are long gone."
 msgstr "Ne, nenašli. Pokud tu někdo byl, je dávno pryč."
 
@@ -6886,15 +6807,11 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg:197
-#, fuzzy
-#| msgid ""
-#| "Move along, elf, unless you enjoy making camp in this icy waste. I, for "
-#| "one, do not!"
 msgid ""
 "Move along, elf, unless you enjoy making camp in this dank cave. I, for one, "
 "do not!"
 msgstr ""
-"Jdi, elfe, jestli tě ovšem nebaví tábořit v této ledové pustině. Mne "
+"Jdi, elfe, jestli tě ovšem nebaví tábořit v této zatuchlé jeskyni. Mne "
 "rozhodně ne!"
 
 #. [message]: speaker=Bona-Melodia
@@ -6973,8 +6890,10 @@ msgstr ""
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg:296
+#, fuzzy
+#| msgid "Then we must hurry. Stand fast! We will send reinforcements."
 msgid "Then we must hurry. Stand fast, we will send reinforcements."
-msgstr "Pak musíme spěchat. Držte se, pošleme posily."
+msgstr "Pak musíme spěchat. Držte se! Pošleme posily."
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg:303
@@ -7456,15 +7375,11 @@ msgstr "A jestliže mu jej odmítnu dát?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:194
-#, fuzzy
-#| msgid ""
-#| "If it is necessary, princess, I will ask Konrad to fight you in a duel "
-#| "for it."
 msgid ""
 "If it is necessary, Princess, I will ask Konrad to fight you in a duel for "
 "it."
 msgstr ""
-"Bude-li to nezbytné, princezno, požádám Konráda, aby se s tebou o něj utkal "
+"Bude-li to nezbytné, Princezno, požádám Konráda, aby se s tebou o něj utkal "
 "v souboji."
 
 #. [message]: speaker=Konrad
@@ -7631,12 +7546,6 @@ msgstr ""
 
 #. [message]: speaker=Uradredia
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:278
-#, fuzzy
-#| msgid ""
-#| "There is another way by which you can return to Wesnoth: past the "
-#| "mountains of the dragons and through the dark valley. To the land of the "
-#| "East, from there you can return to Wesnoth and surprise the Dark Queen, "
-#| "catching her off guard."
 msgid ""
 "There is another way by which you can return to Wesnoth: past the mountains "
 "of the dragons and through the dark valley, to the land of the East. From "
@@ -7832,10 +7741,6 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/22_Return_to_Wesnoth.cfg:258
-#, fuzzy
-#| msgid ""
-#| "What? Me, a traitor? It is the Queen who is a traitor, for not obeying "
-#| "the wishes of King Garard II. We have the Sceptre of Fire, so let us in!"
 msgid ""
 "What? I, a traitor? It is the Queen who is a traitor, for not obeying the "
 "wishes of King Garard II. We have the Sceptre of Fire, so let us in!"
@@ -8769,12 +8674,6 @@ msgstr "Princezna"
 #. [unit_type]: id=Princess, race=human
 #: data/campaigns/Heir_To_The_Throne/units/Princess.cfg:28
 #: data/campaigns/Heir_To_The_Throne/units/Princess.cfg:85
-#, fuzzy
-#| msgid ""
-#| "A noble by birth, the Princess has learnt swordplay with the greatest "
-#| "generals and battle tactics with the greatest sages, making her both a "
-#| "great combatant and leader. The units of lower level around the Princess "
-#| "will fight better due to her presence."
 msgid ""
 "A noble by birth, the Princess has learnt swordplay with the greatest "
 "generals and battle tactics with the greatest sages, making her both a great "
@@ -8865,12 +8764,6 @@ msgstr "Nedaleko je mýtina s jedním obrovským stromem uprostřed."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/utils/httt_utils.cfg:92
-#, fuzzy
-#| msgid ""
-#| "A large tree stands alone in a clearing. Driven into the trunk is a huge "
-#| "sword with flames dancing along its blade. Stangely, while the trunk near "
-#| "the sword is blackened and scorched, the tree seems otherwise unaffected "
-#| "by the flames."
 msgid ""
 "A large tree stands alone in a clearing. Driven into the trunk is a huge "
 "sword with flames dancing along its blade. Strangely, while the trunk near "
@@ -9225,12 +9118,9 @@ msgstr ""
 "pod ochranu elfů. Přitom však musel smutně přihlížet, jak začala Ašvířina "
 "strašná vláda strachu..."
 
-#, fuzzy
-#~| msgid ""
-#~| "A noble by birth, the Princess has learnt swordplay with the greatest "
-#~| "generals, and battle tactics with the greatest sages, making her both a "
-#~| "great combatant and leader. Now battle-hardened and strong of will, she "
-#~| "can now aid those around her in the art of combat."
+#~ msgid "Meeting point"
+#~ msgstr "Místo setkání"
+
 #~ msgid ""
 #~ "A noble by birth, the Princess has learnt swordplay with the greatest "
 #~ "generals and battle tactics with the greatest sages, making her both a "
@@ -9239,15 +9129,9 @@ msgstr ""
 #~ msgstr ""
 #~ "Vznešená od narození, princezna se učila boji s mečem proti nejlepším "
 #~ "generálům a válečné taktice od těch nejmoudřejších, což jí dělá výtečnou "
-#~ "bojovnicí a vůdkyní. Princezna je také mrštná, obratná a má nyní "
-#~ "schopnost ovlivňovat okolní jednotky v jejich umění boje."
+#~ "bojovnicí a vůdkyní. Princezna je také mrštná, obratná a má schopnost "
+#~ "ovlivňovat okolní jednotky v jejich umění boje."
 
-#, fuzzy
-#~| msgid ""
-#~| "A noble by birth, the Princess has learnt swordplay with the greatest "
-#~| "generals, and battle tactics with the greatest sages, making her both a "
-#~| "great combatant and leader. Now battle-hardened and strong of will, she "
-#~| "can now aid those around her in the art of combat."
 #~ msgid ""
 #~ "A noble by birth, the Princess has learnt swordplay with the greatest "
 #~ "generals, and battle tactics with the greatest sages, making her both a "
@@ -9256,8 +9140,8 @@ msgstr ""
 #~ msgstr ""
 #~ "Vznešená od narození, princezna se učila boji s mečem proti nejlepším "
 #~ "generálům a válečné taktice od těch nejmoudřejších, což jí dělá výtečnou "
-#~ "bojovnicí a vůdkyní. Princezna je také mrštná, obratná a má nyní "
-#~ "schopnost ovlivňovat okolní jednotky v jejich umění boje."
+#~ "bojovnicí a vůdkyní. Princezna je také mrštná, obratná a má schopnost "
+#~ "ovlivňovat okolní jednotky v jejich umění boje."
 
 #~ msgid "I was afraid that’s what you were going to say."
 #~ msgstr "Obával jsem se, že to řekneš."
