--- a/po/wesnoth-sota/cs.po
+++ b/po/wesnoth-sota/cs.po
@@ -1,20 +1,20 @@
 # translation of wesnoth-sota.pot to Czech
 # Czech translations for Battle for Wesnoth package.
 # Český překlad hry Battle for Wesnoth (Bitva o Wesnoth).
-# Copyright (C) 2017 - 2018 Wesnoth development team
+# Copyright (C) 2017 - 2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Czech Wesnoth translation team <hrubymar10@gmail.com>,
 #
 #
-# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2018.
+# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-09-14 22:37+0200\n"
+"PO-Revision-Date: 2019-02-15 21:25+0100\n"
 "Last-Translator: Martin Hrubý (hrubymar10) <hrubymar10@gmail.com>\n"
 "Language-Team: Český <hrubymar10@gmail.com>\n"
 "Language: cs\n"
@@ -22,7 +22,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Secrets of the Ancients
 #. [editor_group]: id=sota
@@ -68,6 +68,12 @@ msgstr "Náročná"
 
 #. [campaign]: id=Secrets of the Ancients
 #: data/campaigns/Secrets_of_the_Ancients/_main.cfg:21
+#, fuzzy
+#| msgid ""
+#| "Rediscover the secrets known by the lich lords of the Green Isle. They "
+#| "knew how to live forever, so why can't you?\n"
+#| "\n"
+#| "(Hard level, 21 scenarios.)\n"
 msgid ""
 "Rediscover the secrets known by the lich lords of the Green Isle. They knew "
 "how to live forever, so why can't you?\n"
@@ -77,7 +83,7 @@ msgstr ""
 "Znovu objev tajemství lichů ze Zeleného ostrova. Proč by jsi nemohl žít "
 "navždy, stejně jako oni?\n"
 "\n"
-"(Obtížnost: pokročilý hráč, 21 scénářů.)\n"
+"(Obtížnost: těžká, 21 scénářů.)\n"
 
 #. [about]
 #: data/campaigns/Secrets_of_the_Ancients/_main.cfg:28
@@ -327,6 +333,11 @@ msgstr ""
 
 #. [message]: speaker=Ardonna
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg:323
+#, fuzzy
+#| msgid ""
+#| "Wolves! This journey may be more dangerous than I thought. Well, we can "
+#| "find safety inside the sturdy fences built by farmers and woodcutters. "
+#| "The wild animals surely won't be able to enter."
 msgid ""
 "Wolves! This journey may be more dangerous than I thought. Well, we can find "
 "safety inside the sturdy fences built by farmers and woodcutters. The wild "
@@ -2310,11 +2321,15 @@ msgstr ""
 
 #. [message]: speaker=Krissaz
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg:163
+#, fuzzy
+#| msgid ""
+#| "When the mage isss dead and her dead horde put to ressst, we agree. We "
+#| "will have been compensssated adequately."
 msgid ""
 "When the mage isss dead and her sssouls put to ressst, we agree. We will "
 "have been compensssated adequately."
 msgstr ""
-"Až bude čarodějka mrtvá a její duššše bude odpočívat, tak budeme "
+"Až bude čarodějka mrtvá a její mrtvé hordy budou odpočívat, tak budeme "
 "sssouhlasssit sss tím, že nám to bylo dossstatečným způsssobem "
 "vykompenzováno."
 
@@ -2360,6 +2375,13 @@ msgstr ""
 
 #. [message]: speaker=Vendraxis
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg:225
+#, fuzzy
+#| msgid ""
+#| "I have ssstared into the darknesss between the starsss and not been "
+#| "intimidated by the void, but your mind holds a darknesss of another kind, "
+#| "frightening and forbidden by my clan. I sssubmit to your power. Now that "
+#| "I know you are female, I will find it easier as it isss the way of my "
+#| "kind."
 msgid ""
 "I have ssstared into the darknesss between the starsss and not been "
 "intimidated by the void, but your mind holdsss a darknesss of another kind, "
@@ -4383,6 +4405,22 @@ msgstr "Poloprázdno"
 #~ msgid "Gwyllin"
 #~ msgstr "Gwyllin"
 
+#, fuzzy
+#~| msgid "Right-click on a grave adjacent to your leader to raise a unit."
+#~ msgid "Right-click adjacent to your leader to summon the bat."
+#~ msgstr ""
+#~ "Kliknutím pravím tlačítkem na hrob vedle tvého velitele můžeš vyvolat "
+#~ "jednotku."
+
+#~ msgid "Summon the Bat (20 gold)"
+#~ msgstr "Přivolat netopýra (20 zlatých)"
+
+#~ msgid "You don't have enough gold to summon the bat."
+#~ msgstr "Nemáš dostatek zlatých k přivolání netopýra."
+
+#~ msgid "Keep quiet about that."
+#~ msgstr "O tomhle mlč."
+
 #~ msgid "plural^You may watch."
 #~ msgstr "Můžeš se dívat."
 
@@ -4407,3 +4445,6 @@ msgstr "Poloprázdno"
 
 #~ msgid "self_female^I don’t fancy wading in the water to fight these things."
 #~ msgstr "Nemám chuť brodit se ve vodě kvůli boji s těmito věcmi."
+
+#~ msgid "Good. Now I can practice recruiting ghosts."
+#~ msgstr "Výborně. Od teď mohu verbovat duchy."
