--- a/po/wesnoth-trow/cs.po
+++ b/po/wesnoth-trow/cs.po
@@ -1,7 +1,7 @@
 # translation of wesnoth-trow.pot to Czech
 # Czech translations for Battle for Wesnoth package.
 # Český překlad hry Battle for Wesnoth (Bitva o Wesnoth).
-# Copyright (C) 2004 - 2018 Wesnoth development team
+# Copyright (C) 2004 - 2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Czech Wesnoth translation team <hrubymar10@gmail.com>,
@@ -11,14 +11,14 @@
 # Oto 'tapik' Buchta <tapik@buchtovi.cz>, 2005 - 2007, 2010.
 # Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2011.
 # Honza <Honza-mistic@seznam.cz>, 2014.
-# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2018.
+# Martin Hrubý <hrubymar10@gmail.com>, 2017 - 2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
-"PO-Revision-Date: 2018-04-05 16:38+0200\n"
+"PO-Revision-Date: 2019-02-15 21:35+0100\n"
 "Last-Translator: Martin Hrubý (hrubymar10) <hrubymar10@gmail.com>\n"
 "Language-Team: Český <hrubymar10@gmail.com>\n"
 "Language: cs\n"
@@ -26,7 +26,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [scenario]: id=22_The_Rise_of_Wesnoth
 #. [campaign]: id=The_Rise_of_Wesnoth
@@ -85,8 +85,10 @@ msgstr ""
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:26
+#, fuzzy
+#| msgid "(Hard level, 24 scenarios.)"
 msgid "(Expert level, 24 scenarios.)"
-msgstr "(Obtížnost: expert, 24 scénářů)"
+msgstr "(Obtížnost: těžká, 24 scénářů)"
 
 #. [about]
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:29
@@ -1689,8 +1691,10 @@ msgstr ""
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:240
+#, fuzzy
+#| msgid "We will help."
 msgid "We will help. "
-msgstr "Pomůžeme ti. "
+msgstr "Pomůžeme ti."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:240
@@ -7242,6 +7246,9 @@ msgid ""
 msgstr ""
 "To jsou vskutku skvělé zprávy. Náš počet se tím zdvojnásobil. A teď zpět k "
 "práci, již máme zde."
+
+#~ msgid "Yetis"
+#~ msgstr "Yetiové"
 
 #~ msgid "bite"
 #~ msgstr "kousnutí"
